# Hinterland

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md
backend/: .dockerignore  .env.example  Dockerfile  compose.yaml  pyproject.toml
backend/admin/: __init__.py  cleanup_smoke_users.py  derived_state_rebuild.py  dispatcher_replay.py  expedition_funnel.py  inat_outbox_replay.py  inat_submit_consumer.py  moderation_consumer.py  moderation_outbox_relay.py  observation_health_probe.py  observation_legacy_reconcile.py  observation_migration_preflight.py  observation_retention.py  rarity_refresh.py  sweep_stale_reviews.py  sync_expeditions.py  taxa_catalog_ingest.py
backend/alembic/: env.py
backend/alembic/versions/: 20260510_0002_observations_dispatched_at.py  20260602_0003_phase6_entra_and_kid_handoff.py  20260603_0004_parent_consent_records.py  20260603_0005_sanctuary_state_tables.py  20260604_0006_moderation_state_and_inat_outbox.py  20260702_0007_rarity_cache_iconic_taxon.py  20260702_0008_observations_photo_unique.py  20260703_0009_sanctuary_taxonless_repair.py  20260703_0010_observations_taxon_first_assigned.py  20260707_0007_users_firebase_uid_nullable.py  20260707_0011_merge_hinterland_heads.py  20260709_0014_observation_w1_contract.py  20260709_0015_taxonomy_packs_and_cv_cache.py  20260711_0018_parent_consent_browser_nonce.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: auth.py  dex.py  expeditions.py  geocode.py  groups.py  internal_inat.py  internal_moderation.py  meta.py  observations.py  photos.py  review_queue.py  sanctuary.py  (+2 more)
backend/app/core/: auth.py  config.py  errors.py  geospatial.py  internal_auth.py  key_vault.py  kid_jwt.py  logging.py  parent_consent.py  storage.py
backend/app/db/: models.py  session.py
backend/app/derived_state/: __init__.py  rebuild.py
backend/app/dispatcher/: core.py  registry.py  types.py
backend/app/geocoding/: __init__.py  cache.py  provider.py
backend/app/inat/: client.py  cv.py  enqueue.py  observations.py  submit.py
backend/app/matchers/: context.py  taxon_sets.py
backend/app/models/: expedition.py  sanctuary.py
backend/app/moderation/: __init__.py  enqueue.py  processor.py  provider.py  review_service.py
backend/app/observation/: __init__.py  photo_finalize.py
backend/app/rarity/: __init__.py  refresh.py
backend/app/sanctuary/: __init__.py  content.py  season.py  service.py  types.py
backend/app/services/: expedition_progress.py  expedition_ranking.py  species_cache.py
backend/tests/: conftest.py  test_auth.py  test_auth_consent.py  test_auth_user_resolution.py  test_central_api_colocation_assets.py  test_cors.py  test_db_foundation.py  test_dev_login.py  test_dex.py  test_dispatcher_core.py  test_dispatcher_dex.py  test_dispatcher_expedition.py  test_dispatcher_rarity.py  test_dispatcher_replay.py  test_dispatcher_snapshots.py  test_dispatcher_world.py  test_draft_expedition.py  test_expedition_endpoints.py  test_expedition_progress.py  test_expedition_ranking.py  test_geocoding.py  test_geospatial.py  test_groups.py  test_inat_client.py  test_inat_enqueue.py  test_inat_outbox_replay.py  test_inat_submit.py  test_inat_submit_consumer.py  test_internal_auth.py  test_internal_inat_submit.py  test_internal_moderation.py  test_kid_exchange.py  test_kid_jwt.py  test_matchers.py  test_meta.py  test_moderation_consumer.py  test_moderation_enqueue.py  test_moderation_outbox_relay.py  test_moderation_processor.py  test_moderation_provider.py  (+27 more)
backend/tests/helpers/: auth.py
backend/tests/integration/: test_observation_postgres.py
(+413 files in other folders)
