[project]
name = "dragonfly-backend"
version = "0.1.0"
description = "Dragonfly API — citizen science for kids 9–12"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.30,<1",            # ASGI server for Cloud Run
    "mangum>=0.19.0",              # Lambda adapter for ASGI (legacy AWS path)
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Persistence
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.35",

    # AWS
    "boto3>=1.35.0",
    "botocore>=1.35.0",

    # Auth
    "pyjwt[crypto]>=2.9.0",              # Phase 6: RS256 verification for Entra + Dragonfly JWTs
    "azure-identity>=1.19.0",            # Phase 6: DefaultAzureCredential picks up UAMI in Container Apps
    "aiohttp>=3.10.0",                   # Azure async managed-identity transport for Service Bus workers
    "azure-keyvault-secrets>=4.8.0",     # Phase 6: read kid-jwt signing/public PEMs + Entra settings
    "azure-storage-blob>=12.23.0",       # Phase 6b: user-delegation SAS URLs for photo upload + download
    "azure-servicebus>=7.13.0",          # Risk 0002: enqueue inat-submit messages from moderation/review-approve
    "cachetools>=5.5.0",                 # Phase 6: TTLCache for backend-augmented role/group_id lookup
    "google-auth>=2.30.0",               # Internal-route OIDC: id_token.verify_oauth2_token for Eventarc / Cloud Tasks / Scheduler

    # HTTP client (async, for iNat)
    "httpx>=0.27.0",

    # Observability
    "structlog>=24.4.0",

    # IDs and time
    "python-ulid>=2.7.0",
    "python-geohash>=0.8.5",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "moto[dynamodb,s3,sqs,cognitoidp]>=5.0.0",
    "httpx>=0.27.0",               # for TestClient
    "respx>=0.21.0",               # httpx mocks for iNat / geocoding integration tests

    # Linting and typing
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-python-jose",

    # Local dev
    "watchfiles>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "C4",   # comprehensions
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long — ruff format handles this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B018"]  # allow useless-expression in tests (pytest asserts)

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "azure.identity.*",
    "azure.keyvault.*",
    "azure.servicebus.*",
    "azure.storage.*",
    "firebase_admin.*",
    "geohash.*",
    "google.auth.*",
    "google.cloud.*",
    "google.oauth2.*",
    "moto.*",
    "cachetools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: tests that require moto or DynamoDB Local",
    "slow: tests that take >1s",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "lambdas/*/handler.py"]

[tool.coverage.report]
skip_covered = false
show_missing = true
fail_under = 75  # bump to 85 by end of Phase 1
